<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_height"
        android:autofillHints=""
        android:background="@drawable/search_text"
        android:hint="@string/organization_hint"
        android:inputType="textAutoCorrect"
        android:layout_margin="@dimen/small_margin_padding"
        android:paddingStart="@dimen/text_padding"
        android:paddingEnd="@dimen/text_padding"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorSecondary"
        android:textSize="@dimen/search_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/search_button"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/search"
        android:layout_margin="@dimen/small_margin_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/small_margin_padding"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/small_margin_padding"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/repo_item_view" />

    <ProgressBar
        android:id="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>